# FinancialMarketsMCP

./: .gitignore  README.md  debug_logger.py  pyproject.toml  requirements.txt  structure.md
deployments/docker/: Dockerfile  docker-compose.yml
deployments/k8s/: deployment.yaml  hpa.yaml  service.yaml
deployments/nginx/: nginx.conf
deployments/systemd/: mcp-server.service
mcp-server/: debug_fastmcp.py  pyproject.toml  setup.py  start_mcp.py
src/app/: bootstrap.py  cli.py  main.py  settings.py
src/app/exceptions/: handlers.py
src/app/middleware/: auth.py  logging.py
src/app/routes/: health.py  mcp_routes.py
src/app/utils/: docs.py
src/common/: custom_exceptions.py  decorators.py  exceptions.py  logger.py  settings.py
src/mcp/: __init__.py  protocol.py  router.py
src/tools/crypto/: schemas.py  service.py  tool.py
src/tools/forex/: schemas.py  service.py  tool.py
tests/: conftest.py
tests/integration/: api_test.py
tests/unit/: services_test.py  tools_test.py
tests/unit/forext/: test_forex_tools.py
