[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-financial-market"
version = "1.0.0"
description = "MCP Server for Crypto & Forex data"
authors = [
  { name = "Call me Alee", email = "aleeOstovar@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "fastmcp>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "black>=24.0.0",   # Code formatter
    "isort>=5.13.0",   # Import sorter
    "mypy>=1.8.0"      # Type checker
]

# --- 🛠️ PACKAGE DISCOVERY (Crucial for src/ layout) ---
[tool.setuptools.packages.find]
where = ["src"]  # Tells Python your code is inside the 'src' folder
include = ["*"]  # Include all packages found there

# --- 🧪 PYTEST CONFIGURATION ---
# This allows you to just run 'pytest' without extra arguments
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = "*_test.py test_*.py"
# This fixes the "ModuleNotFoundError: No module named src" during tests
pythonpath = [
    "."
]

# --- 🎨 FORMATTER CONFIGURATION (Black) ---
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

# --- 🧹 IMPORT SORTER (Isort) ---
[tool.isort]
profile = "black"
src_paths = ["src", "tests"]